--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -1,61 +1,80 @@
 ---
-interface Props {
-	title: string;
-	body: string;
-	href: string;
-}
+import { contentfulClient } from "../lib/contentful";
+import type { EntryFieldTypes } from "contentful";
+import { Image } from 'astro:assets';
+import celiacLogo from "../../public/gluten-free.png"
+import veganLogo from "../../public/vegan.png"
 
-const { href, title, body } = Astro.props;
+interface Card {
+	contentTypeId: "menuItem",
+	fields: {
+    title: EntryFieldTypes.Text
+    content: EntryFieldTypes.RichText,
+		foodTitle: string;
+		foodImage: string;
+		foodPrice: string;
+		foodDescription: string;
+		vegan: boolean;
+		celiac: boolean;
+  }
+}
+	
+const entries = await contentfulClient.getEntries<Card>({
+	content_type: "menuItem",
+});
+
 ---
 
-<li class="link-card">
-	<a href={href}>
-		<h2>
-			{title}
-			<span>&rarr;</span>
-		</h2>
-		<p>
-			{body}
-		</p>
-	</a>
-</li>
+<div>
+  {entries.items.map((item) => (
+    <section class="card">
+      <h2>{item.fields.foodTitle}</h2>
+			<img src={item.fields.foodImage.fields.file.url} alt={item.fields.foodTitle} />
+			<span class="price">{item.fields.foodPrice}</span>
+			<p>{item.fields.foodDescription}</p>
+			<div class="icons">
+				{item.fields.vegan && <Image class="food_icon" src={veganLogo} alt="logo de alimento vegano" /> }
+				{item.fields.celiac && <Image class="food_icon" src={celiacLogo} alt="logo de alimento celiaco" /> }
+			</div>
+		</section>
+	))}
+</div>
+
 <style>
-	.link-card {
-		list-style: none;
-		display: flex;
-		padding: 1px;
+	.card {
 		background-color: #23262d;
 		background-image: none;
+		background-position: 100%;
 		background-size: 400%;
 		border-radius: 7px;
-		background-position: 100%;
-		transition: background-position 0.6s cubic-bezier(0.22, 1, 0.36, 1);
 		box-shadow: inset 0 0 0 1px rgba(255, 255, 255, 0.1);
-	}
-	.link-card > a {
-		width: 100%;
-		text-decoration: none;
-		line-height: 1.4;
-		padding: calc(1.5rem - 1px);
-		border-radius: 8px;
 		color: white;
-		background-color: #23262d;
+		display: flex;
+		flex-direction: column;
+		line-height: 1.4;
+		margin: 4rem 12px;
 		opacity: 0.8;
+		padding: calc(1.5rem - 10px);
+		text-decoration: none;
+		transition: background-position 0.6s cubic-bezier(0.22, 1, 0.36, 1);
 	}
-	h2 {
-		margin: 0;
-		font-size: 1.25rem;
-		transition: color 0.6s cubic-bezier(0.22, 1, 0.36, 1);
+	.price {
+		display: flex;
+		flex-direction: row-reverse;
+		margin-top: 16px;
 	}
-	p {
-		margin-top: 0.5rem;
-		margin-bottom: 0;
+	.icons {
+		display: flex;
 	}
-	.link-card:is(:hover, :focus-within) {
-		background-position: 0;
-		background-image: var(--accent-gradient);
-	}
-	.link-card:is(:hover, :focus-within) h2 {
-		color: rgb(var(--accent-light));
+	.food_icon {
+		border: 1px solid #13151a;
+		background-color: #fff;
+		opacity: .7;
+		border-radius: 16px;
+		padding: 8px;
+		margin: 8px;
+		height: 20px;
+		width: 20px;
+
 	}
 </style>
